[package]
name = "ephemerish"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bollard = "0.14.0"
dashmap = "5.4.0"
russh = "*"
russh-keys = "*"
thiserror = "*"
futures = "*"
tokio = {version = "*", features = ["full"]}
async-trait = "*"